Added project files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /bower_components
@@ -15,3 +13,7 @@
 #System Files
 .DS_Store
 Thumbs.db
+### Phalcon template
+/cache/
+/config/development/
+
