--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=5.6.4",
+        "firebase/php-jwt": "^4.0"
     },
     "require-dev": {
         "phalcon/devtools": "dev-master",
