Added docker env

--- a/phalcon3-compose/conf/nginx/default.conf
+++ b/phalcon3-compose/conf/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen 443 ssl http2;
 
     # Server name being used (exact name, wildcards or regular expression)
     server_name localhost;
@@ -10,19 +11,24 @@ server {
     index index.php index.html;
 
     location / {
-        try_files $uri $uri/ /index.php?args;
-        if (!-e $request_filename) {
-            rewrite ^/(.*)$ /index.php last;
-        }
+        try_files $uri $uri/ /index.php?_url=$uri&$args;
     }
 
     location ~ \.php$ {
-       fastcgi_pass   app:9000;
-       fastcgi_index  index.php;
-       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-       fastcgi_param  APPLICATION_ENV development;
-       add_header     Authorization $http_authorization;
-       include        fastcgi_params;
+       fastcgi_pass app:9000;
+       # regex to split $uri to $fastcgi_script_name and $fastcgi_path
+       fastcgi_split_path_info ^(.+\.php)(/.+)$;
+       fastcgi_index index.php;
+
+       include fastcgi_params;
+
+       # Bypass the fact that try_files resets $fastcgi_path_info
+       # see: http://trac.nginx.org/nginx/ticket/321
+       set $path_info $fastcgi_path_info;
+       fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+       fastcgi_param APPLICATION_ENV development;
+
+       #add_header Authorization $http_authorization;
     }
 
     # Logging
