--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "firebase/php-jwt": "^4.0"
+        "firebase/php-jwt": "^4.0",
+        "league/fractal": "^0.16.0"
     },
     "require-dev": {
         "phalcon/devtools": "dev-master",
