Added tag controller.

--- a/phalcon3-compose/conf/nginx/default.conf
+++ b/phalcon3-compose/conf/nginx/default.conf
@@ -6,7 +6,7 @@ server {
     server_name localhost;
     client_max_body_size 200M;
 
-    # Document root, make sure this points to your Drupal 8 / directory
+    # Document root, make sure this points to your Phalcon web directory
     root /var/www/html/public;
     index index.php index.html;
 
