--- a/phalcon3-compose/docker-compose.yml
+++ b/phalcon3-compose/docker-compose.yml
@@ -16,6 +16,8 @@ app:
   tty: true
   ports:
    - "6900:6900"
+  dns:
+    - 8.8.8.8
   volumes:
    - ./logs/php-fpm:/var/log/php-fpm
    - ..:/var/www/html
