--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,12 @@
     "require-dev": {
         "phalcon/devtools": "dev-master",
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "codeception/codeception": "^2.2",
+        "codeception/verify": "~0.3",
+        "codeception/specify": "~0.4",
+        "codeception/mockery-module": "^0.2",
+        "squizlabs/php_codesniffer": "~2.7"
     },
     "autoload": {
         "classmap": [
