--- a/codeception.yml
+++ b/codeception.yml
@@ -1,10 +1,18 @@
+actor_suffix: Tester
 paths:
     tests: tests
     output: tests/_output
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
-actor_suffix: Tester
+settings:
+    bootstrap: _bootstrap.php
+    colors: true
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
+coverage:
+  enabled: true
+  remote: false
+  include:
+    - app/*.php
