--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -1,11 +1,8 @@
-# Codeception Test Suite Configuration
-#
-# Suite for unit or integration tests.
-
-actor: UnitTester
+actor: ApiTester
 modules:
     enabled:
         - Asserts
+        - \Helper\Api
         - \Helper\Unit
         - Phalcon:
             bootstrap: public/index.php
