--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
         "php": ">=5.6.4",
         "phalcon/incubator": "^3.1",
         "firebase/php-jwt": "^4.0",
+        "vlucas/phpdotenv": "^2.4",
         "league/fractal": "^0.16.0"
     },
     "require-dev": {
         "phalcon/devtools": "dev-master",
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "codeception/codeception": "^2.2",
+        "squizlabs/php_codesniffer": "~2.7"
     },
     "autoload": {
         "classmap": [
