--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 RW_ENV=dev
 
-RW_MYSQL_HOST=
-RW_MYSQL_USER=
-RW_MYSQL_PASS=
-RW_MYSQL_NAME=
+RW_MYSQL_HOST=db
+RW_MYSQL_USER=root
+RW_MYSQL_PASS=secret
+RW_MYSQL_NAME=realworlddb
