--- a/boxfile.yml
+++ b/boxfile.yml
@@ -17,6 +17,7 @@ run.config:
       - xml
       - xmlwriter
       - zip
+      - session
   extra_steps:
     - echo "alias phalcon=\'phalcon.php\'" >> /data/var/home/gonano/.bashrc
 data.realworld:
