--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "phalcon/incubator": "^3.1",
         "firebase/php-jwt": "^4.0",
-        "vlucas/phpdotenv": "^2.4",
-        "league/fractal": "^0.16.0"
+        "league/fractal": "^0.16.0",
+        "phalcon/incubator": "^3.1",
+        "techpivot/phalcon-ci-installer": "^1.0",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phalcon/devtools": "dev-master",
