--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,35 +1,39 @@
-db:
-  image: mysql:latest
-  container_name: dev_db
-  expose:
-    - "3306"
-  ports:
-    - "3307:3306"
-  environment:
-    MYSQL_DATABASE: realworlddb
-    MYSQL_USER: phalcon
-    MYSQL_PASSWORD: secret
-    MYSQL_ROOT_PASSWORD: secret
-app:
-  image: linxlad/php7-fpm
-  container_name: dev_app
-  tty: true
-  ports:
-   - "9000:9000"
-  volumes:
-   - ./logs/php-fpm:/var/log/php-fpm
-   - ..:/var/www/html
-  links:
-   - db
-web:
-  tty: true
-  image: linxlad/nginx
-  container_name: dev_web
-  ports:
-   - "8080:80"
-  volumes:
-   - ./conf/nginx:/etc/nginx/conf.d
-   - ./logs/nginx:/var/log/nginx
-   - ..:/var/www/html
-  links:
-   - app
+version: '2'
+services:
+  db:
+    image: mysql:latest
+    container_name: dev_db
+    expose:
+      - "3306"
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_DATABASE: realworlddb
+      MYSQL_USER: phalcon
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
+  app:
+    image: linxlad/php7-fpm
+    container_name: dev_app
+    tty: true
+    ports:
+     - "6900:6900"
+    volumes:
+     - ./logs/php-fpm:/var/log/php-fpm
+     - ..:/var/www/html
+    links:
+     - db
+  web:
+    tty: true
+    image: linxlad/nginx
+    container_name: dev_web
+    ports:
+     - "8080:80"
+    volumes:
+     - ./conf/nginx:/etc/nginx/conf.d
+     - ./logs/nginx:/var/log/nginx
+     - ..:/var/www/html
+    links:
+      - app
+    depends_on:
+      - app
