--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,8 +16,8 @@ build:
           - ~/cphalcon
 
   dependencies:
-      #override: -- The child node "command" at path "override.1" must be configured.
-      #  - composer install --prefer-source --no-interaction
+      override:
+         - composer install --prefer-source --no-interaction
       after:
           - vendor/bin/install-phalcon.sh 3.0.x
 
@@ -25,9 +25,10 @@ build:
     before:
 
   tests:
-    -
-      command: 'cd /home/scrutinizer/build/realworld-phalcon; ./run_tests'
-      coverage:
+    override:
+      -
+        command: 'cd /home/scrutinizer/build/realworld-phalcon; ./run_tests'
+        coverage:
           file: 'realworld-phalcon/tests/_output/coverage.xml'
           format: 'php-clover'
 
