--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -44,16 +44,16 @@ tools:
     config:
       standard: PSR2
     filter:
-      paths: ['src']
+      paths: ['app', 'library', 'public']
   php_loc:
     enabled: true
-    excluded_dirs: [vendor, tests]
+    excluded_dirs: ['vendor', 'tests', 'app/migrations']
   php_loc:
     enabled: true
-    excluded_dirs: [vendor, tests]
+    excluded_dirs: ['vendor', 'tests', 'app/migrations']
   php_cpd:
     enabled: true
-    excluded_dirs: [vendor, tests]
+    excluded_dirs: ['vendor', 'tests', 'app/migrations']
 checks:
   php:
     return_doc_comments: true
