--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
     "require": {
         "php": ">=5.6.4",
         "firebase/php-jwt": "^4.0",
+        "fzaninotto/faker": "^1.6",
         "league/fractal": "^0.16.0",
         "phalcon/incubator": "^3.1",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "zachleigh/yarak": "^1.1"
     },
     "require-dev": {
         "phalcon/devtools": "dev-master",
-        "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~5.7",
         "codeception/codeception": "^2.2",
         "squizlabs/php_codesniffer": "~2.7"
