--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "classmap": [
-            "app/migrations"
+            "app/database"
         ],
         "psr-4": {
             "RealWorld\\": "app/"
